--- a/_posts/2025-05-17-Events .md
+++ b/_posts/2025-05-17-Events .md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: Events
+title: 
 subtitle: 
-categories: Events
-tags: [Initial, Memorandum]
+categories: Server
+tags: [Server, Proxmox, HomeAssistant]
 ---
 
