--- a/_posts/2025-06-08-mmWave-1.md
+++ b/_posts/2025-06-08-mmWave-1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: 재실센서, 그런데 ESP32인. (1)
-subtitle: HomeAssistant mmWave 재실 센서 구성기 01
+title: "재실센서, 그런데 ESP32인. (1)"
+subtitle: "HomeAssistant mmWave 재실 센서 구성기 01"
 categories: Server
 tags: [Server, Proxmox, HomeAssistant, ESP32]
 ---
