--- a/_posts/2025-05-17-Auxies.md
+++ b/_posts/2025-05-17-Auxies.md
@@ -53,8 +53,8 @@ tags: [Music, Auxy]
 
 ## 2022
 ### 연화 連華
-1. 암실조곡
-2. 본이에 대한 자기성찰적 접근
+1. 暗室組曲
+2. 本夷에 対한 自己省察的 接近
 3. 내선순환
 4. 전 잘 지내고 있어요 엄마
 5. 벚꽃
@@ -75,13 +75,13 @@ tags: [Music, Auxy]
 
 ## 2023
 ### 경의선 이북의 긴 밤
-0. 경의선 이북의 긴 밤(구)
+0. 京義線 以北之 長夜(旧)
 1. 곡산역(2023)
-2. 동라가
-3. 경보
-4. 조소인민친선만세
+2. 帰れ
+3. 輕步
+4. 朝蘇人民親善万歳
 5. 적색편이
-6. 경의선 이북의 긴 밤
+6. 京義線 以北之 長夜 ![京義線 以北之 長夜](/assets/audio/auxies/"京義線 以北之 長夜.m4a")
 
 ### 2023 Rewind
 1. Ross Couch - Break Up
@@ -96,7 +96,7 @@ tags: [Music, Auxy]
 2. 대가리가 꽃밭
 3. ~~기시감~~
 4. ~~새벽녘의 한강~~
-5. 종점의 기적
+5. 종점의 기적 ![](/assets/audio/auxies/"종점의 기적.m4a")
 6. 착각
 7. ~~합정~~
 8. ~~합정(var)~~
